--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.74.3",
     "antd": "^5.24.7",
     "axios": "^1.8.4",
+    "lightweight-charts": "^5.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
